@@ -23,6 +23,24 @@ package|;
 end_package
 
 begin_import
+import|import static
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|webapp
+operator|.
+name|YarnWebParams
+operator|.
+name|ENTITY_STRING
+import|;
+end_import
+
+begin_import
 import|import
 name|java
 operator|.
@@ -43,6 +61,34 @@ operator|.
 name|conf
 operator|.
 name|Configuration
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|mapreduce
+operator|.
+name|JobID
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|mapreduce
+operator|.
+name|TaskAttemptID
 import|;
 end_import
 
@@ -437,6 +483,110 @@ name|void
 name|logs
 parameter_list|()
 block|{
+name|String
+name|logEntity
+init|=
+name|$
+argument_list|(
+name|ENTITY_STRING
+argument_list|)
+decl_stmt|;
+name|JobID
+name|jid
+init|=
+literal|null
+decl_stmt|;
+try|try
+block|{
+name|jid
+operator|=
+name|JobID
+operator|.
+name|forName
+argument_list|(
+name|logEntity
+argument_list|)
+expr_stmt|;
+name|set
+argument_list|(
+name|JOB_ID
+argument_list|,
+name|logEntity
+argument_list|)
+expr_stmt|;
+name|requireJob
+argument_list|()
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|e
+parameter_list|)
+block|{
+comment|// fall below
+block|}
+if|if
+condition|(
+name|jid
+operator|==
+literal|null
+condition|)
+block|{
+try|try
+block|{
+name|TaskAttemptID
+name|taskAttemptId
+init|=
+name|TaskAttemptID
+operator|.
+name|forName
+argument_list|(
+name|logEntity
+argument_list|)
+decl_stmt|;
+name|set
+argument_list|(
+name|TASK_ID
+argument_list|,
+name|taskAttemptId
+operator|.
+name|getTaskID
+argument_list|()
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|set
+argument_list|(
+name|JOB_ID
+argument_list|,
+name|taskAttemptId
+operator|.
+name|getJobID
+argument_list|()
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|requireTask
+argument_list|()
+expr_stmt|;
+name|requireJob
+argument_list|()
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|e
+parameter_list|)
+block|{
+comment|// fall below
+block|}
+block|}
 name|render
 argument_list|(
 name|HsLogsPage
