@@ -30,28 +30,6 @@ name|apache
 operator|.
 name|hadoop
 operator|.
-name|mapreduce
-operator|.
-name|v2
-operator|.
-name|app
-operator|.
-name|webapp
-operator|.
-name|AMParams
-operator|.
-name|TASK_ID
-import|;
-end_import
-
-begin_import
-import|import static
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
 name|yarn
 operator|.
 name|webapp
@@ -134,51 +112,8 @@ argument_list|(
 name|html
 argument_list|)
 expr_stmt|;
-name|String
-name|tid
-init|=
-name|$
-argument_list|(
-name|TASK_ID
-argument_list|)
-decl_stmt|;
-name|String
-name|activeNav
-init|=
-literal|"2"
-decl_stmt|;
-if|if
-condition|(
-name|tid
-operator|==
-literal|null
-operator|||
-name|tid
-operator|.
-name|isEmpty
+name|setActiveNavColumnForTask
 argument_list|()
-condition|)
-block|{
-name|activeNav
-operator|=
-literal|"1"
-expr_stmt|;
-block|}
-name|set
-argument_list|(
-name|initID
-argument_list|(
-name|ACCORDION
-argument_list|,
-literal|"nav"
-argument_list|)
-argument_list|,
-literal|"{autoHeight:false, active:"
-operator|+
-name|activeNav
-operator|+
-literal|"}"
-argument_list|)
 expr_stmt|;
 name|set
 argument_list|(
