@@ -23,42 +23,6 @@ package|;
 end_package
 
 begin_import
-import|import static
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|yarn
-operator|.
-name|webapp
-operator|.
-name|YarnWebParams
-operator|.
-name|CONTAINER_ID
-import|;
-end_import
-
-begin_import
-import|import static
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|yarn
-operator|.
-name|webapp
-operator|.
-name|YarnWebParams
-operator|.
-name|ENTITY_STRING
-import|;
-end_import
-
-begin_import
 import|import
 name|org
 operator|.
@@ -117,55 +81,13 @@ argument_list|>
 name|html
 parameter_list|)
 block|{
-name|String
-name|logEntity
-init|=
-name|$
-argument_list|(
-name|ENTITY_STRING
-argument_list|)
-decl_stmt|;
-if|if
-condition|(
-name|logEntity
-operator|==
-literal|null
-operator|||
-name|logEntity
-operator|.
-name|isEmpty
-argument_list|()
-condition|)
-block|{
-name|logEntity
-operator|=
-name|$
-argument_list|(
-name|CONTAINER_ID
-argument_list|)
-expr_stmt|;
-block|}
-if|if
-condition|(
-name|logEntity
-operator|==
-literal|null
-operator|||
-name|logEntity
-operator|.
-name|isEmpty
-argument_list|()
-condition|)
-block|{
-name|logEntity
-operator|=
-literal|"UNKNOWN"
-expr_stmt|;
-block|}
 name|commonPreHead
 argument_list|(
 name|html
 argument_list|)
+expr_stmt|;
+name|setActiveNavColumnForTask
+argument_list|()
 expr_stmt|;
 block|}
 comment|/**    * The content of this page is the JobBlock    * @return HsJobBlock.class    */
