@@ -30,6 +30,28 @@ name|apache
 operator|.
 name|hadoop
 operator|.
+name|mapreduce
+operator|.
+name|v2
+operator|.
+name|app
+operator|.
+name|webapp
+operator|.
+name|AMParams
+operator|.
+name|TASK_ID
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
 name|yarn
 operator|.
 name|webapp
@@ -303,6 +325,62 @@ literal|"nav"
 argument_list|)
 argument_list|,
 literal|"{autoHeight:false, active:0}"
+argument_list|)
+expr_stmt|;
+block|}
+comment|/**    * Determine which navigation column is active.    */
+DECL|method|setActiveNavColumnForTask ()
+specifier|protected
+name|void
+name|setActiveNavColumnForTask
+parameter_list|()
+block|{
+name|String
+name|tid
+init|=
+name|$
+argument_list|(
+name|TASK_ID
+argument_list|)
+decl_stmt|;
+name|String
+name|activeNav
+init|=
+literal|"2"
+decl_stmt|;
+if|if
+condition|(
+operator|(
+name|tid
+operator|==
+literal|null
+operator|||
+name|tid
+operator|.
+name|isEmpty
+argument_list|()
+operator|)
+condition|)
+block|{
+name|activeNav
+operator|=
+literal|"1"
+expr_stmt|;
+block|}
+name|set
+argument_list|(
+name|initID
+argument_list|(
+name|ACCORDION
+argument_list|,
+literal|"nav"
+argument_list|)
+argument_list|,
+literal|"{autoHeight:false, active:"
+operator|+
+name|activeNav
+operator|+
+literal|"}"
 argument_list|)
 expr_stmt|;
 block|}
